# game-engine-development

./: CMakeLists.txt  README.md  index.cpp
design/: cheatsheet.md
glad/: CMakeLists.txt
glad/include/glad/: glad.h
lib/: CMakeLists.txt
lib/glad/src/: glad.c
src/: app.cpp  app.hpp
src/shaders/: README.md
